--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ matplotlib==3.5.2
 scikit-learn==1.1.2
 flask==2.2.2
 gunicorn==20.1.0
-numpy
-urllib3
+numpy==1.23.1
+urllib3==1.26.11
 requests
 itsdangerous>=2.0
 Jinja2>=3.0
