--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,10 @@ flask==2.2.2
 gunicorn==20.1.0
 numpy==1.23.1
 urllib3==1.26.11
-requests
+requests==2.28.1
 itsdangerous>=2.0
 Jinja2>=3.0
-MarkupSafe==1.1.1
+MarkupSafe>=2.1.1
 Werkzeug==2.2.2
 scipy>=1.3.2
 
