--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ pandas>=1.4.3
 flask==2.1.3
 gunicorn==20.1.0
 numpy==1.23.1
-fsspec
+fsspec >= 2022.7.1
 python-dateutil>=2.7.3
-imblearn
+imblearn >= 0.0
